# leptess

./: Cargo.toml  LICENSE  Makefile  README.md  aliases.js  build.rs  build_variables.py  crates.js  help.html  search-index.js  set_variables_list.txt  settings.html  source-files.js  wrapper.h
.circleci/: config.yaml  config.yml
examples/: low_level_ocr_full_page.rs  low_level_ocr_word_by_word.rs  ocr_full_page.rs  ocr_word_by_word.rs  set_from_image_crate.rs  set_resolution.rs  with_leptonica_c_api.rs
leptess/: all.html  enum.Variable.html  index.html  sidebar-items.js  struct.LepTess.html
leptonica_plumbing/: all.html  enum.PixReadMemError.html  fn.get_imagelib_versions.html  fn.get_version.html  index.html  sidebar-items.js  struct.BorrowedBox.html  struct.BorrowedPix.html  struct.Box.html  struct.BoxCreateValidError.html  struct.Boxa.html  struct.LeptonicaString.html  struct.Pix.html  struct.PixReadError.html  struct.Pixa.html  struct.Str.html
leptonica_sys/: all.html  constant.ADDED_BORDER.html  constant.ASYMMETRIC_MORPH_BC.html  constant.BIG_ENDIAN.html  constant.BMP_ID.html  constant.BOXAA_VERSION_NUMBER.html  constant.BOXA_VERSION_NUMBER.html  constant.BUFSIZ.html  constant.BYTE_ORDER.html  constant.CCB_GLOBAL_COORDS.html  constant.CCB_LOCAL_COORDS.html  constant.CCB_SAVE_ALL_PTS.html  constant.CCB_SAVE_TURNING_PTS.html  constant.COLOR_BLUE.html  constant.COLOR_GREEN.html  constant.COLOR_RED.html  constant.DEFAULT_CLIP_LOWER_1.html  constant.DEFAULT_CLIP_LOWER_2.html  constant.DEFAULT_CLIP_UPPER_1.html  constant.DEFAULT_CLIP_UPPER_2.html  constant.DEWARP_VERSION_NUMBER.html  constant.DNA_VERSION_NUMBER.html  constant.DPIX_VERSION_NUMBER.html  constant.EOF.html  constant.EXIT_FAILURE.html  constant.EXIT_SUCCESS.html  constant.FALSE.html  constant.FD_SETSIZE.html  constant.FILENAME_MAX.html  constant.FOPEN_MAX.html  constant.FPIX_VERSION_NUMBER.html  constant.GPLOT_OUTPUT_GPLOT_EPS.html  constant.GPLOT_OUTPUT_GPLOT_LATEX.html  (+4146 more)
libc/: all.html  (+5410 more)
(+5622 files in other folders)
