[package]
name = "leptess"
version = "0.14.0"
authors = ["QP Hou <dave2008713@gmail.com>", "Chris Couzens <ccouzens@gmail.com>"]
description = "Productive Rust binding for Tesseract and Leptonica."
homepage = "https://github.com/houqp/leptess"
repository = "https://github.com/houqp/leptess"
readme = "README.md"
keywords = ["leptonica", "tesseract", "ocr", "image"]
license = "MIT"
documentation = "https://houqp.github.io/leptess/leptess/index.html"

[dependencies]
tesseract-plumbing = {version = "~0.11", default-features = false}
thiserror = "1"
leptonica-plumbing = "~1.3.0"

[dev-dependencies]
image = "0.24.7"
regex = "1.4.3"

[features]
default = ["tesseract_5_2"]
tesseract_5_2 = ["tesseract-plumbing/tesseract_5_2"]
